# lbm-visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Application.hpp  CudaCheck.hpp  ScalarTexture.hpp  SimulationFrame.hpp  SliceExtractor.hpp  UserInterface.hpp  VelocityArrowBuilder.hpp  VelocityArrowRenderer.hpp  VisualizationState.hpp  VtiReader.hpp
include/app/: Application.hpp  SimulationConfig.hpp  SliceExtractor.hpp  VelocitySlice.hpp  VisualizationState.hpp  common.cuh
include/cuda/: LbmSolver.hpp  common.cuh  grid.cuh
include/geometry/: ObstacleFactory.hpp  ProbeOverlayBuilder.hpp  VelocityArrowBuilder.hpp
include/lbm/: LbmSolver.hpp  grid.hpp
include/opengl/: Enums.hpp  ObstacleFactory.hpp  PBOBuffer.hpp  ProbeOverlayBuilder.hpp  ProbeResult.hpp  Renderer.hpp  ScalarTexture.hpp  SimulationFrame.hpp  SliceExtractor.hpp  UserInterface.hpp  VelocityArrowBuilder.hpp  VisualizationState.hpp
include/rendering/: PBOBuffer.hpp  ScalarTexture.hpp  Shader.hpp
include/ui/: UserInterface.hpp
shaders/: frag.glsl  quad.frag  quad.vert  velocity_arrows.frag  velocity_arrows.vert
src/: Application.cpp  CudaCheck.cu  Renderer.cpp  ScalarTexture.cpp  Shader.cpp  SliceExtractor.cpp  UserInterface.cpp  VelocityArrowBuilder.cpp  VelocityArrowRenderer.cpp  VtiReader.cpp  main.cpp
src/app/: Application.cpp  SliceExtractor.cpp
src/cuda/: LbmSolver.cpp  boundary.cu  collision.cu  init.cu  macro.cu  streaming.cu  visualize.cu
src/geometry/: ObstacleFactory.cpp  ProbeOverlayBuilder.cpp  VelocityArrowBuilder.cpp
src/lbm/: LbmSolver.cpp
src/lbm/kernels/: boundary.cu  collision.cu  init.cu  macro.cu  streaming.cu  visualize.cu
src/opengl/: ObstacleFactory.cpp  PBOBuffer.cpp  ProbeOverlayBuilder.cpp  Renderer.cpp  ScalarTexture.cpp  SliceExtractor.cpp  UserInterface.cpp  VelocityArrowBuilder.cpp
src/rendering/: PBOBuffer.cpp  Renderer.cpp  ScalarTexture.cpp  Shader.cpp  VelocityArrowRenderer.cpp
src/ui/: UserInterface.cpp
